# tas-epd-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  library.properties  readme.md
Inc/: epd_api.h  epd_types.h
Src/core/: epd_core.c
Src/drivers/: JD79661.c  JD79661.h  SSD1677.c  SSD1677.h  SSD1680.c  SSD1680.h  epd_driver_interface.h
Src/hal/: epd_hal_interface.h
Src/hal/ports/: hal_arduino.cpp  hal_arduino.h  hal_pico.c  hal_pico.h  hal_rpi.c  hal_rpi.h  hal_stm32.c  hal_stm32.h
Src/modules/: TAS0213SBWYR_E50.c  TAS0213SBWYR_E50.h  TAS0213SBW_B74.c  TAS0213SBW_B74.h  TAS0266SBW-T90.c  TAS0266SBW_T90.c  TAS0266SBW_T90.h  TAS0290SBW_T94.c  TAS0290SBW_T94.h  TAS0426SBW_T82.c  TAS0426SBW_T82.h  epd_modules.h
cmake/: AppBuild.cmake  LibBuild.cmake  modules.cmake  pico_sdk_import.cmake  stm32_toolchain.cmake
example/: CMakeLists.txt
example/Pico_Example/: CMakeLists.txt  main.c
example/STM32F103C8_TAS0213SBWYR_E50/: .mxproject  CMakeLists.txt  STM32F103C8_TAS0213SBWYR_E50.ioc
example/STM32F103C8_TAS0213SBWYR_E50/Core/Src/: main.c
example/STM32F103C8_TAS0213SBWYR_E50/cmake/stm32cubemx/: CMakeLists.txt
example/STM32_Example/: CMakeLists.txt
example/STM32_Example/STM32F103C8_2CEPD_section/: CMakeLists.txt
example/STM32_Example/STM32F103C8_2CEPD_section/Core/Inc/: main.h  stm32f1xx_hal_conf.h
example/STM32_Example/STM32F103C8_2CEPD_section/Core/Src/: main.c  stm32f1xx_hal_msp.c
example/STM32_Example/STM32F103C8_4CEPD_section/: CMakeLists.txt
example/STM32_Example/cmake/: stm32_auto_drivers.cmake
